--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laminas/laminas-cache-storage-adapter-{adapter}",
-    "description": "Laminas cache adapter for {adapter}",
+    "name": "laminas/laminas-cache-storage-adapter-mongodb",
+    "description": "Laminas cache adapter for mongodb",
     "keywords": [
         "laminas",
         "cache"
@@ -44,10 +44,10 @@
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "support": {
-        "issues": "https://github.com/laminas/laminas-cache-storage-adapter-{adapter}/issues",
+        "issues": "https://github.com/laminas/laminas-cache-storage-adapter-mongodb/issues",
         "forum": "https://discourse.laminas.dev/",
-        "source": "https://github.com/laminas/laminas-cache-storage-adapter-{adapter}",
-        "docs": "https://docs.laminas.dev/laminas-cache-storage-adapter-{adapter}/",
-        "rss": "https://github.com/laminas/laminas-cache-storage-adapter-{adapter}/releases.atom"
+        "source": "https://github.com/laminas/laminas-cache-storage-adapter-mongodb",
+        "docs": "https://docs.laminas.dev/laminas-cache-storage-adapter-mongodb/",
+        "rss": "https://github.com/laminas/laminas-cache-storage-adapter-mongodb/releases.atom"
     }
 }
