--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,4 +14,9 @@
             <directory suffix=".php">./src</directory>
         </whitelist>
     </filter>
+    <php>
+        <env name="TESTS_LAMINAS_CACHE_MONGODB_COLLECTION" value="cache" />
+        <env name="TESTS_LAMINAS_CACHE_MONGODB_CONNECTSTRING" value="mongodb://localhost/" />
+        <env name="TESTS_LAMINAS_CACHE_MONGODB_DATABASE" value="laminas_test" />
+    </php>
 </phpunit>
