--- a/.travis.yml
+++ b/.travis.yml
@@ -61,9 +61,11 @@ before_install:
   - if [[ $TEST_COVERAGE != 'true' ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
 
 install:
-  - if [[ $TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL != 'true' ]]; then phpenv config-add .ci/mongo.ini ; fi
+  - if [[ $TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL != 'true' ]]; then
+      phpenv config-add .ci/mongo.ini ;
+    fi ;
+  - if [[ $TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL == 'true' ]]; then travis_retry composer require --dev --no-update $COMPOSER_ARGS mongofill/mongofill:dev-master ; fi
   - travis_retry composer install $COMPOSER_ARGS --ignore-platform-reqs
-  if [[ $TESTS_LAMINAS_CACHE_MONGODB_USE_POLYFILL == 'true' ]]; then travis_retry composer require --dev --no-update $COMPOSER_ARGS mongofill/mongofill:dev-master ; fi
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer update $COMPOSER_ARGS ; fi
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable $COMPOSER_ARGS ; fi
   - if [[ $TEST_COVERAGE == 'true' ]]; then travis_retry composer require --dev $COMPOSER_ARGS $COVERAGE_DEPS ; fi
